assets/stylesheets/mobile/chat-drawer.scss
html.has-full-page-chat body #main-outlet #main-chat-outlet {
  min-height: unset; //I think this fixes those weird scroll bugs
}

.full-page-chat {
  .channels-list {
    min-height: 100vh;
    padding-bottom: 3rem;
    background-color: var(--primary-very-low);

    .direct-message-channels {
      .chat-channel-title {
        padding: 0.75rem 0; //minor adjustment for visual consistency with channels which dont have avatars
      }
    }

    .chat-channel-row {
      margin: 0;
      padding: 0;
      border-radius: 0;

      &:not(:last-child) {
        .chat-channel-title {
          border-bottom: 1px solid var(--primary-low);
        }
      }
    }

    .chat-channel-divider {
      background-color: var(--secondary);
      margin-top: 4rem;
      padding: 1rem 1.5rem;
      font-size: var(--font-up-1);

      &:first-of-type {
        margin-top: 0;
        padding-bottom: 0.5rem; //visual compensation
      }

      .channel-title {
        color: var(--quaternary);
      }
    }

    .channels-list-container {
      background: var(--secondary);
    }

    .chat-user-avatar {
      img {
        width: calc(var(--chat-mobile-avatar-size) - 2px);
        height: calc(var(--chat-mobile-avatar-size) - 2px);
      }

      + .chat-channel-title__usernames {
        margin-left: 1rem;
      }
    }

    .chat-channel-title {
      margin-inline: 1.5rem;
      padding: 1.25rem 0;
      width: 100%;
      overflow: hidden;

      &__users-count {
        width: var(--chat-mobile-avatar-size);
        height: var(--chat-mobile-avatar-size);
        padding: 0;
        font-size: var(--font-up-3);
        justify-content: center;

        & + .chat-channel-title__name {
          margin-left: 1rem;
        }
      }

      &__name {
        font-size: 20px;
        font-size: var(--font-up-2);
      }

      &__category-badge {
        font-size: var(--font-up-2);
      }
    }

    .chat-channel-unread-indicator {
      margin-left: 0;
    }
  }

  .btn-floating.new-dm {
    position: absolute;
    background: var(--tertiary);
    bottom: 2.5rem;
    right: 2.5rem;
    border-radius: 50%;
    font-size: var(--font-up-5);
    padding: 1rem;
    transition: transform 0.25s ease, box-shadow 0.25s ease;
    z-index: z("usercard");
    box-shadow: 0px 5px 5px -1px rgba(0, 0, 0, 0.25);

    .d-icon {
      color: var(--primary-very-low);
    }

    &:active {
      box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.25);
      transform: scale(0.9);
    }

    &:focus {
      @include default-focus;
      border-color: var(--quaternary);
      outline-color: var(--quaternary);
    }
  }
}

